Fixed word-wrap

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -143,7 +143,10 @@ a:hover > .stats{
 	display:block;
 }
 
-
+.icon > p {
+	max-width: 200px;
+    word-wrap: break-word;
+}
 
 .icon-doc-text:before {
 
